hard-gists/641dc6b15155e600135d/run.log
=== Docker Run Log for 641dc6b15155e600135d ===
Started at: Mi 29. Okt 16:30:35 CET 2025

[2025-10-29 16:30:36] START: Running container for 641dc6b15155e600135d
[2025-10-29 16:30:36] SUCCESS: Container a0d62b4bdf69761d6ce84b98580c1d17f9d5514c9a5eb03fc1142964def293c1 started for 641dc6b15155e600135d
=== Container logs for 641dc6b15155e600135d ===
  File "/snippet.py", line 42
    print "%s\t%s\t%i" % (now, k, v)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 641dc6b15155e600135d ===
[2025-10-29 16:30:38] INFO: Container a0d62b4bdf69761d6ce84b98580c1d17f9d5514c9a5eb03fc1142964def293c1 has stopped
